# DeadCellsClone

./: .gitignore  CMakeLists.txt  CORE_README.md  README.md  main.cpp
include/: Camera.hpp  FishEyeGradient.hpp  Game.hpp  GameUI.hpp  Map.hpp  Pathfinding.hpp  PauseMenuUI.hpp  Player.hpp  ScrapHound.hpp  Spawner.hpp  TitleScreenUI.hpp
include/core/: Core.hpp  EventManager.hpp  FastRNG.hpp  GameLoop.hpp  GameStates.hpp  GlobalThreadPool.hpp  InputManager.hpp  ResourceManager.hpp  StateManager.hpp  ThreadPool.hpp
include/effects/: ParticleSystem.hpp  ParticleThreadPool.hpp  ThreadPool.hpp
include/enemies/: Automaton.hpp  Detonode.hpp  Enemy.hpp  EnemyManager.hpp  ScrapHound.hpp
include/map/: LadderRopePlacer.hpp  Map.hpp  MapConstants.hpp  RoomConnectionGenerator.hpp  RoomContentGenerator.hpp  RoomGenerator.hpp  RoomGridGenerator.hpp
include/ui/: GameHUDComponent.hpp  GameOverComponent.hpp  LoadingScreenComponent.hpp  Minimap.hpp  PauseMenuComponent.hpp  TitleScreenComponent.hpp  UIController.hpp
include/weapons/: Weapon.hpp  WeaponTypes.hpp
shader/: bloom.fs  chromatic_aberration.fs  screenshake.fs
src/: Camera.cpp  FishEyeGradient.cpp  Game.cpp  GameRendering.cpp  GameResources.cpp  GameStates.cpp  GameUI.cpp  GameUpdate.cpp  Map.cpp  MapAutomata.cpp  MapCollisionSpawn.cpp  MapGeneration.cpp  MapRendering.cpp  Pathfinding.cpp  PauseMenuUI.cpp  Player.cpp  ScrapHound.cpp  Spawner.cpp  TitleScreenUI.cpp
src/core/: Core.cpp  EventManager.cpp  FastRNG.cpp  GameLoop.cpp  GameStates.cpp  GlobalThreadPool.cpp  InputManager.cpp  ResourceManager.cpp  Spawner.cpp  StateManager.cpp
src/effects/: ParticleSystem.cpp  ParticleThreadPool.cpp  ThreadPool.cpp
src/enemies/: Automaton.cpp  AutomatonDraw.cpp  AutomatonUpdateHelpers.cpp  Enemy.cpp  EnemyManager.cpp  ScrapHound.cpp  ScrapHoundCombat.cpp  ScrapHoundDraw.cpp  ScrapHoundUpdateHelpers.cpp
src/map/: LadderRopePlacer.cpp  Map.cpp  MapAutomata.cpp  MapCollisionSpawn.cpp  MapConstants.cpp  MapGeneration.cpp  MapLavaRendering.cpp  MapLavaSimulation.cpp  MapRendering.cpp  RoomContentGenerator.cpp  (+3 more)
(+175 files in other folders)
